@@ -14,6 +14,11 @@ New in spot 2.7.1.dev  (not yet released)
     possible to iterate over a kripke_graph object in a way similar to
     twa_graph.
 
+  Build:
+
+  - Work around a spurious null dereference warning when compiling
+    with --coverage and g++ 8.3.0-3 from Debian unstable.
+
 New in spot 2.7.1 (2019-02-14)
 
   Build
